--- a/Components/MovieCard/MovieCard.scss
+++ b/Components/MovieCard/MovieCard.scss
@@ -1,3 +1,75 @@
+@import '../../scss/variables';
+
 .MovieCard {
-    background-color: red;
+    
+    &__wrapper {
+        margin: 0 auto;
+        max-width: 90%;
+    }
+    
+    &__header,
+    &__info {
+        display: flex;
+        justify-content: space-between;
+        padding: 15px 0;
+    }
+
+    &__title {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 22px;
+    }
+
+    &__year {
+        color: $accent;
+        font-size: 20px;
+    }
+
+    &__img { 
+        max-width: 100%;
+        height: auto;
+    }
+    
+    &__infoData {
+        display: flex;
+        justify-content: space-between;
+    }
+                    
+    &__infoBlock {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    &__infoText {
+        color: $accent;
+        font-weight: 700;
+
+        &--right {
+            text-align: right;
+        }
+    }
+
+    &__infoLabel {
+        font-size: 12px;
+        font-weight: 300;
+
+        &--right {
+            text-align: right;
+        }
+    }
+    
+    &__quote {
+        color: $accent;
+        font-weight: 300;
+        text-align: center;
+        font-style: italic;
+        margin: 30px 0;
+    }
+    
+    &__desc {
+        text-align: justify;
+        padding: 15px;
+        background-color: $secondary;
+        margin: 30px 0;
+    }
 }
