--- a/Components/MovieCard/MovieCard.scss
+++ b/Components/MovieCard/MovieCard.scss
@@ -5,6 +5,8 @@
     &__wrapper {
         margin: 0 auto;
         max-width: 90%;
+        display: flex;
+        flex-direction: column;
     }
 
     &__loaderWrapper {
@@ -37,8 +39,10 @@
     }
 
     &__img { 
+        width: 500px;
         max-width: 100%;
         height: auto;
+        align-self: center;
     }
     
     &__infoData {
@@ -52,7 +56,6 @@
     }
     
     &__infoText {
-        color: $accent;
         font-weight: 700;
 
         &--right {
@@ -63,6 +66,7 @@
     &__infoLabel {
         font-size: 12px;
         font-weight: 300;
+        color: $accent;
 
         &--right {
             text-align: right;
@@ -82,5 +86,41 @@
         padding: 15px;
         background-color: $secondary;
         margin: 30px 0;
+    }
+
+    @media all and (min-width: 1024px) {
+
+        &__wrapper {
+            position: relative;
+            flex-direction: row;
+            max-width: 850px;
+            background-color: $secondary;
+            padding-right: 20px;
+        }
+       
+        &__header {
+            position: absolute;
+            left: 420px;
+            display: flex;
+            justify-content: space-between;
+            width: 420px;
+        }
+
+        &__img {
+            align-self: center;
+            order: 1;
+            height: 600px;
+            width: auto;
+        }
+
+        &__main {
+            order: 3;
+            align-self: flex-end;
+            margin-left: 2%;
+        }
+
+        &__desc {
+            padding: 0;
+        }
     }
 }
