--- a/Components/Search/Search.scss
+++ b/Components/Search/Search.scss
@@ -15,7 +15,7 @@
     }
 
     &__input {
-        width: 500px;
+        width: 400px;
         max-width: 90%;
         margin: 30px auto 10px;
         padding: 10px;
@@ -25,11 +25,19 @@
         color: $main-text;
         border: 0;
         border-bottom: 2px solid $accent;
-    }
     
-    &__input:focus {
-        // outline: 1px solid $accent;
-        outline: none;
+    
+        &:focus {
+            // outline: 1px solid $accent;
+            outline: none;
+        }
+
+        &::placeholder {
+            text-transform: lowercase;
+            font-weight: 300;
+            font-size: 18px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
     }
     
     &__closeIcon {
@@ -45,12 +53,13 @@
     &__list {
         position: absolute;
         top: 75px;
-        width: 500px;
+        width: 400px;
         font-size: 18px;
         background-color: $secondary;
-        padding: 10px;
+        padding: 0 10px;
         align-self: center;
         z-index: 10;
+        max-width: 90%;
     }
     
     &__elem {
@@ -58,6 +67,10 @@
         display: flex;
         justify-content: space-between;
         cursor: pointer;
+
+        &:first-of-type {
+            padding-top: 15px;
+        }
     }
     
     &__movieTitle {
@@ -75,6 +88,20 @@
         padding-right: 20px;
         width: 80px;
         height: 100%;
+    }
+
+    @media all and (min-width: 1024px) {
+
+        &__input {
+            max-width: 100%;
+        }
+
+        &__wrapper {
+            justify-content: flex-end;
+            flex-direction: row;
+            margin-bottom: 30px;
+            margin-right: 10%;
+        }
     }
 }
 
