--- a/Components/Discover/Discover.scss
+++ b/Components/Discover/Discover.scss
@@ -18,12 +18,41 @@
     &__element {
         max-width: 300px;
         margin: 0 auto;
+        cursor: pointer;
     }
 
     &__slider {
-        //slider styles
         .slick-slide {
             padding: 0 20px;
         }
+
+        .slick-prev {
+            left: 5px;
+        }
+
+        .slick-next {
+            right: 5px;
+        }
+
+        .slick-prev,
+        .slick-next {
+            z-index: 5;
+        }
     }    
+
+    @media all and (min-width: 450px) {
+        &__element {
+            max-width: 100%;
+        }
+
+        &__movieImg {
+            max-height: 500px;
+        }
+    }
+
+    @media all and (min-width: 1024px) {
+        &__movieImg {
+            max-height: 100%;
+        }
+    }
 }
