--- a/Components/MovieCard/MovieCard.scss
+++ b/Components/MovieCard/MovieCard.scss
@@ -10,14 +10,15 @@
     }
 
     &__loaderWrapper {
+        height: 400px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
     &__loader {
-        width: 200px;
-        height: auto;
+        // width: 200px;
+        // height: auto;
     }
     
     &__header,
@@ -121,6 +122,33 @@
 
         &__desc {
             padding: 0;
+            padding-top: 5px;
+        }
+
+        &__title {
+            font-size: 26px;
+            font-weight: 500;
+        }
+    
+        &__year {
+            font-size: 30px;
+        }
+        
+        &__infoText {
+            font-size: 20px;
+        }    
+
+        &__infoLabel {
+            font-size: 16px;
+        }
+        
+        &__quote,
+        &__desc {
+            font-size: 16px;
+        }
+
+        &__quote {
+            margin: 20px 0;
         }
     }
 }
